k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-demo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    name: go-demo
