k8s-deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      name: go-demo
  template:
    metadata:
      labels:
        name: go-demo
    spec:
      containers:
      - name: application
        image: greyhats13/demo:alpine
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-demo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    name: go-demo
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: go-demo
  namespace: sit
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/cors-allow-headers: 'x-app-version,x-api-key,Authorization'
    # nginx.ingress.kubernetes.io/server-snippet: |-
    #   location ~* ^/(metrics|health|liveness|debug) {
    #   error_page 404 /404.html;
    #   }
    #   if ($http_user_agent !~* "(okhttp|Go-http|Java|axisnet|Postman)" ) { 
    #     return 405; 
    #   }
spec:
  rules:
    - host: go-demo.dev.api.efishery.com
      http:
        paths:
          - backend:
              serviceName: go-demo
              servicePort: 8080
